Github Action Test를 위한 각종 변경사항

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,10 @@ spring:
       enabled: true
       path: /h2-console
 
-traffic:
+seoul:
   base-url: http://openapi.seoul.go.kr:8088
   api-key: ${TOPIS_API_KEY}
+
+ex:
+  base-url: https://data.ex.co.kr/openapi/
+  api-key: 7730526404
