--- a/.github/workflows/highway.yml
+++ b/.github/workflows/highway.yml
@@ -1,54 +1,53 @@
-name: highway
+# name: highway
 
-on:
-  schedule:
-    - cron: "*/10 * * * *"
-  workflow_dispatch:
+# on:
+#   schedule:
+#     - cron: "*/10 * * * *"
+#   workflow_dispatch:
 
-permissions:
-  contents: write
+# permissions:
+#   contents: write
 
-jobs:
-  run-flowtrack:
-    runs-on: ubuntu-latest
+# jobs:
+#   run-flowtrack:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          persist-credentials: false
-          fetch-depth: 0
+#     steps:
+#       - name: Checkout repository
+#         uses: actions/checkout@v4
+#         with:
+#           persist-credentials: false
+#           fetch-depth: 0
 
-      - name: Set up JDK 21
-        uses: actions/setup-java@v4
-        with:
-          java-version: '21'
-          distribution: 'temurin'
+#       - name: Set up JDK 21
+#         uses: actions/setup-java@v4
+#         with:
+#           java-version: '21'
+#           distribution: 'temurin'
 
-      - name: Build with Gradle
-        run: |
-          chmod +x ./gradlew
-          ./gradlew -x test bootJar
+#       - name: Build with Gradle
+#         run: |
+#           chmod +x ./gradlew
+#           ./gradlew -x test bootJar
 
-      - name: Run Highway CLI (고속도로 교통)
-        env:
-          EX_API_KEY: "7730526404"
-        run: |
-          java -Dspring.profiles.active=cli \
-               -jar build/libs/FlowTrack-0.0.1-SNAPSHOT.jar \
-               --task=highway
+#       - name: Run Highway CLI (고속도로 교통)
+#         env:
+#           EX_API_KEY: "7730526404"
+#         run: |
+#           java -Dspring.profiles.active=cli \
+#                -jar build/libs/FlowTrack-0.0.1-SNAPSHOT.jar \
+#                --task=highway
 
-      - name: Commit CSV results
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+#       - name: Commit CSV results
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#         run: |
+#           git config --global user.name "github-actions[bot]"
+#           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-         
-          git pull --rebase --autostash https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git main || true
+#           git pull --rebase --autostash https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git main || true
 
-          git add .
-          git commit -m "Auto update CSV data [$(date '+%Y-%m-%d %H:%M:%S')]" || echo "No changes to commit"
+#           git add .
+#           git commit -m "Auto update CSV data [$(date '+%Y-%m-%d %H:%M:%S')]" || echo "No changes to commit"
 
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
+#           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
